@@ -2,6 +2,9 @@
 	* lisp/sawfish/gtk/widget.jl: 	- allow negative values in spinbuttons in sawfish-ui
 					- connect spinbuttons to value-changed signal (allows typing in the value manually)
 
+	* lisp/sawfish/wm/state/maximize.jl
+	* lisp/sawfish/wm/ext/match-window.jl: added fullscreen-xinerama window matcher [Jeremy Hankins]
+
 2009-07-15  Christopher Bratusek <zanghar@freenet.de>
 	* src/Makefile.in: add --tag=CC there necessary on some systems [Gentoo]
 
